# CodeKeeper

./: .clang-format  .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  Installation.md  LICENSE.md  README.md  SECURITY.md  Screenshots.md  Shortcuts.md  Tweaks.md  build.sh  build_and_push.sh  clang_format.sh  push_project.py  rm_cache.sh  start.sh
.github/workflows/: build_project.yml  clang_format.yml
CodeKeeper/: mainwindow.cpp  mainwindow.h  settingswindow.h  syncwindow.h  syncwindow.ui  ui_settingswindow.h
doc/: Installation.md  Screenshots.md  Shortcuts.md  Tweaks.md
src/CodeKeeper/: .gitignore  .qmake.stash  CMakeCache.txt  CMakeLists.txt  CodeKeeper  CodeKeeper.pro  CodeKeeper_ru_RU.ts  Makefile  accountwindow.cpp  accountwindow.h  cmake_install.cmake  commandPalette.cpp  commandPalette.h  custom_stylesheet.qss  custom_stylesheet_light.qss  custom_stylesheet_solarized.qss  data.db  mac_dark_stylesheet.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_CircleChart.cpp  moc_ColorValueDisplay.cpp  moc_ProgressCircle.cpp  moc_accountwindow.cpp  moc_linenumberarea.cpp  moc_mainwindow.cpp  moc_markdownhighlighter.cpp  moc_predefs.h  moc_qmarkdowntextedit.cpp  moc_qplaintexteditsearchwidget.cpp  moc_settingswindow.cpp  moc_syncwindow.cpp  qmake_qmake_immediate.qrc  qrc_media.cpp  qrc_qmake_qmake_immediate.cpp  qrc_resources.cpp  settingswindow.cpp  settingswindow.h  (+10 more)
src/CodeKeeper/.qtc_clangd/: compile_commands.json
src/CodeKeeper/.qtc_clangd/.cache/clangd/index/: QApplication.FB1AC9037C8F3BFC.idx  QClipboard.3B91A5D92D01C926.idx  QComboBox.15083CC810A259DF.idx  QCommonStyle.2C1FA20782DC6948.idx  QDateTime.CD01307BB02C7A9B.idx  QDeadlineTimer.2BD49A0D4416A439.idx  QDebug.9A9188714D5CFBF3.idx  QFile.FDB606D45EC47A79.idx  QFileSystemModel.B750AA873BB203A1.idx  QFlags.97F552CEEF866879.idx  QFrame.48AECB5BCD7A1B1B.idx  QGridLayout.36FC288735992368.idx  QIcon.7BE000CCD5E5FDAF.idx  QKeyEvent.EA099F6C3955758F.idx  QLabel.9455F93D231E4BCE.idx  QLatin1String.670CABD0392CB7FB.idx  QLayout.0878C110CA7AA6FE.idx  QLineEdit.4EE793BCA58575FE.idx  QList.6095E68C017DF8F4.idx  QMainWindow.C726D1C0C497539A.idx  QMatrix3x3.D4D1354298767146.idx  QMatrix4x4.03A67E0BE6461F14.idx  QMultiHash.763383EF91088D93.idx  QObject.F93F02DEB28C5924.idx  QOpenGLContext.D53DF3073FA1EDC7.idx  QPaintDevice.CF6AF627639BC370.idx  QPaintDeviceWindow.ADD72866F6A49DEC.idx  QPainterPath.203CB7EE222C9A91.idx  QPlainTextEdit.25CE983CE0FF4A71.idx  QPointF.B03E256DB2054521.idx  QPropertyAnimation.0B1425244B98213A.idx  QPushButton.69CF5741B78879D2.idx  QQuickItem.F78DE8453B961C54.idx  QQuickTextDocument.D2731943887BD73C.idx  QRect.7F1A5FA7FB796CB5.idx  QRegularExpression.782C79D89EBD1DFD.idx  QScopedPointer.4FE61CDABF025E37.idx  QScrollerProperties.780DF0C359F79900.idx  QSettings.1E5C586E2DB78507.idx  QSharedDataPointer.B427F51ED61EEF09.idx  (+502 more)
src/CodeKeeper/accountFunc/: functional.cpp
src/CodeKeeper/custom/ColorValueDisplay/: ColorValueDisplay.h
src/CodeKeeper/custom/circleChart/: CircleChart.h
src/CodeKeeper/custom/circleProgressbar/: ProgressCircle.h
src/CodeKeeper/custom/clickableLabel/: clickableLabel.h
src/CodeKeeper/db/: create_connect_to_keeper.cpp  create_connect_to_settings.cpp  keeper_db.cpp  restore_data.cpp
src/CodeKeeper/keeperFunc/: addConnects.cpp  commandsFunc.cpp  createMenu.cpp  functional.cpp  getProjectInfo.cpp  notesFunc.cpp  project_edit.cpp  projectsFunc.cpp  tasksFunc.cpp
src/CodeKeeper/qmarkdowntextedit/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdownhighlighter.cpp  markdownhighlighter.cpp_nord  markdownhighlighter.h  media.qrc  qmarkdowntextedit-app.pro  qmarkdowntextedit-headers.pri  qmarkdowntextedit-lib.pro  qmarkdowntextedit-sources.pri  qmarkdowntextedit.cpp  qmarkdowntextedit.h  qmarkdowntextedit.pc.in  qmarkdowntextedit.pri  qmarkdowntextedit.pro  qownlanguagedata.cpp  qownlanguagedata.h  qplaintexteditsearchwidget.cpp  qplaintexteditsearchwidget.h  qplaintexteditsearchwidget.ui
src/CodeKeeper/qmarkdowntextedit/.github/: FUNDING.yml
src/CodeKeeper/qmarkdowntextedit/examples/qml/: example.cpp  example.qml  ressources.qrc
src/CodeKeeper/qmarkdowntextedit/scripts/: clang-format-project.sh
src/CodeKeeper/qmarkdowntextedit/trans/: qmarkdowntextedit_de.ts  qmarkdowntextedit_es.ts  qmarkdowntextedit_ur.ts  qmarkdowntextedit_zh_CN.ts
src/CodeKeeper/settingsFunc/: GitHubReleaseDownloader.h  functional.cpp
src/CodeKeeper/sql_db/: connectionDB.cpp  projectsDB.cpp  tasksDB.cpp
src/CodeKeeper/syncFunc/: functional.cpp
src/build-CodeKeeper-Desktop-Debug/: CodeKeeper  Makefile  data.db  moc_linenumberarea.cpp  moc_mainwindow.cpp  moc_markdownhighlighter.cpp  moc_predefs.h  moc_qmarkdowntextedit.cpp  moc_qplaintexteditsearchwidget.cpp  moc_settingswindow.cpp  moc_syncwindow.cpp  qmake_qmake_immediate.qrc  qrc_media.cpp  qrc_qmake_qmake_immediate.cpp  qrc_resources.cpp  ui_qplaintexteditsearchwidget.h
src/build-CodeKeeper-Desktop-Debug/.qtc_clangd/: compile_commands.json
src/build-CodeKeeper-Desktop_x86_windows_msys_pe_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  data.db  object_script.CodeKeeper.Debug  object_script.CodeKeeper.Release  ui_qplaintexteditsearchwidget.h
src/build-CodeKeeper-Desktop_x86_windows_msys_pe_64bit-Debug/debug/: moc_linenumberarea.cpp  moc_mainwindow.cpp  moc_markdownhighlighter.cpp  moc_predefs.h  moc_qmarkdowntextedit.cpp  moc_qplaintexteditsearchwidget.cpp  moc_settingswindow.cpp  moc_syncwindow.cpp  qmake_qmake_immediate.qrc  qrc_media.cpp  (+2 more)
src/resources/: CodeKeeper_ru_RU.ts  resources.qrc
src/stylesheet/: custom_stylesheet.qss  custom_stylesheet_light.qss  stylesheet.qss  stylesheet1.qss  stylesheet22.qss  stylesheet_gruvbox.qss  stylesheet_setting_window.qss
src/stylesheet_amoled/: stylesheet.qss  stylesheet_setting_window.qss
src/stylesheet_nord/: stylesheet.qss
src/stylesheet_original/: stylesheet.qss  stylesheet_setting_window.qss
stylesheet/: stylesheet.qss
(+360 files in other folders)
